--- a/scripts/database_creation.ipynb
+++ b/scripts/database_creation.ipynb
@@ -1,22 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook creates SQL databases that stores different tables from the MIMIC data.  \n",
+    "We first try SQL databse construction with the demo data from the MIMIC data.  \n",
+    "One SQLDdb is created. The DB will contain various tables from the MIMIC data repository.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f6c4930c-98fe-4bea-8d94-a9c22dba4777",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
     "import sqlite3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d4b6143b-e157-44ce-a797-f319233d0915",
    "metadata": {},
    "outputs": [
     {
@@ -33,11 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b462225b-8f4b-4f5f-ae30-50c8a36d10ce",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c48889e2b275>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#read in the demo data via read_csv using pandas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0madmission\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../_demo_data/ADMISSIONS.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mpres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../_demo_data/PRESCRIPTIONS.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0micu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../_demo_data/ICUSTAYS.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpro_event\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../_demo_data/PROCEDUREEVENTS_MV.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "#read in the demo data via read_csv using pandas\n",
     "admission = pd.read_csv('../_demo_data/ADMISSIONS.csv')\n",
     "pres = pd.read_csv('../_demo_data/PRESCRIPTIONS.csv')\n",
     "icu = pd.read_csv('../_demo_data/ICUSTAYS.csv')\n",
@@ -47,20 +65,22 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ba6661f0-0289-45dd-981e-066eead315ae",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#connect to the previously created DB\n",
     "con = sqlite3.connect('MIMIC3_demo.db')\n",
+    "#create cursor\n",
     "cur = con.cursor()\n",
-    "\n",
-    "\n",
+    "#we write the admission table to the db\n",
     "admission.to_sql('admissions', con, if_exists='replace', index = False)\n",
+    "#write the drug table to the db\n",
     "pres.to_sql('prescriptions', con, if_exists='replace', index = False)\n",
+    "#write the icu table to the db\n",
     "icu.to_sql('icustays', con, if_exists='replace', index = False)\n",
+    "#write the procedure table to the db\n",
     "pro_event.to_sql('procedureevents', con, if_exists='replace', index = False)\n",
-    "\n",
-    "\n",
+    "#commit and close the db\n",
     "con.commit()\n",
     "con.close()"
    ]
@@ -68,7 +88,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1b5e3c88-8210-490e-afac-a0453d83707a",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d5ca81ad-f906-43b9-b64b-5faee712b1ce",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +287,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "41cbca6e-970c-4610-b187-b6c27edf5b44",
    "metadata": {},
    "outputs": [
     {
@@ -472,33 +489,26 @@
     }
    ],
    "source": [
+    "#test the db by creating a sqlite3 query (create the con and read the query via pandas)\n",
     "query = \"SELECT * FROM admissions limit 5\"\n",
     "con = sqlite3.connect('MIMIC3_demo.db')\n",
+    "#leverage pd\n",
     "pd.read_sql_query(query, con)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "237dbf4e-96d6-42c4-9d65-0813fbe8f89d",
    "metadata": {},
    "outputs": [],
    "source": [
     "con.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "598b7233-e52a-471e-949f-bcc70cd26987",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -512,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
